--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bike-backend",
+  "name": "buy-bike",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Manikant Jha",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
